Bug 451590 - nsNavHistory needs nsIClassInfo with THREADSAFE flag This changeset marks nsNavHistory as threadsafe so we can use the database connection on more than one thread in JS.  It also adds assertions on every other public API to ensure that it is only running on the main thread. r=dietrich r=bent