toolkit/components/places/src/nsPlacesModule.cpp
@@ -1,4 +1,5 @@
 #include "nsIGenericFactory.h"
+#include "nsIClassInfoImpl.h"
 
 #include "nsAnnoProtocolHandler.h"
 #include "nsAnnotationService.h"
@@ -7,8 +8,16 @@
 #include "nsFaviconService.h"
 #include "nsDocShellCID.h"
 
+#define NS_NAVHISTORY_CLASSINFO \
+  nsnull, nsnull, nsnull, \
+  NS_CI_INTERFACE_GETTER_NAME(nsNavHistory), \
+  nsnull, \
+  &NS_CLASSINFO_NAME(nsNavHistory), \
+  nsIClassInfo::SINGLETON | nsIClassInfo::THREADSAFE
+
 NS_GENERIC_FACTORY_SINGLETON_CONSTRUCTOR(nsNavHistory,
                                          nsNavHistory::GetSingleton)
+NS_DECL_CLASSINFO(nsNavHistory)
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsAnnoProtocolHandler)
 NS_GENERIC_FACTORY_CONSTRUCTOR_INIT(nsAnnotationService, Init)
 NS_GENERIC_FACTORY_CONSTRUCTOR_INIT(nsNavBookmarks, Init)
@@ -19,22 +28,26 @@ static const nsModuleComponentInfo components[] =
   { "Browser Navigation History",
     NS_NAVHISTORYSERVICE_CID,
     NS_NAVHISTORYSERVICE_CONTRACTID,
-    nsNavHistoryConstructor },
+    nsNavHistoryConstructor,
+    NS_NAVHISTORY_CLASSINFO },
 
   { "Browser Navigation History",
     NS_NAVHISTORYSERVICE_CID,
     "@mozilla.org/browser/global-history;2",
-    nsNavHistoryConstructor },
+    nsNavHistoryConstructor,
+    NS_NAVHISTORY_CLASSINFO },
 
   { "Browser Navigation History",
     NS_NAVHISTORYSERVICE_CID,
     "@mozilla.org/autocomplete/search;1?name=history",
-    nsNavHistoryConstructor },
+    nsNavHistoryConstructor,
+    NS_NAVHISTORY_CLASSINFO },
 
   { "Download Navigation History",
     NS_NAVHISTORYSERVICE_CID,
     NS_DOWNLOADHISTORY_CONTRACTID,
-    nsNavHistoryConstructor },
+    nsNavHistoryConstructor,
+    NS_NAVHISTORY_CLASSINFO },
 
   { "Page Annotation Service",
     NS_ANNOTATIONSERVICE_CID,
@@ -59,7 +72,8 @@ static const nsModuleComponentInfo components[] =
   { "Browser History Charset Resolver",
     NS_NAVHISTORYSERVICE_CID,
     "@mozilla.org/embeddor.implemented/bookmark-charset-resolver;1",
-    nsNavHistoryConstructor },
+    nsNavHistoryConstructor,
+    NS_NAVHISTORY_CLASSINFO },
 
 };
 
